<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            tools:context="com.example.mattm.calendar.Views.AddSubjectActivity"
            android:background="@color/colorBackground">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:text="@string/ac1"
              android:textStyle="bold"
              android:textSize="27sp"
              android:layout_margin="8dp" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ac2"
              android:textSize="20sp"
              android:layout_marginTop="8dp"
              android:layout_marginStart="8dp"/>

    <EditText android:layout_margin="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/className"
              android:hint="@string/ac3"
              android:background="@drawable/edittext_style"
              android:padding="8dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_column="0"
            android:layout_row="0">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac4"
                android:textSize="20sp" />

            <EditText android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teacherName"
                android:hint="@string/ac5"
                android:background="@drawable/edittext_style"
                android:padding="8dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_column="1"
            android:layout_row="0">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac6"
                android:textSize="20sp" />

            <EditText android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/period"
                android:hint="@string/ac7"
                android:background="@drawable/edittext_style"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp" />

        </LinearLayout>

    </GridLayout>


    <Button android:id="@+id/addClassButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="addClassButton_Clicked"
            android:text="@string/ac8"
            android:layout_marginTop="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>