<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:columnCount="1"
              android:orientation="vertical"
              android:rowCount="10"
              tools:context="com.example.mattm.calendar.Views.AddEventActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginStart="8dp"
              android:layout_marginTop="32dp"
              android:text="@string/ae1"
              android:textColor="#3e3e3e"
              android:textSize="18sp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="24dp"
              android:text="@string/ae2"
              android:textSize="18sp"/>

    <EditText android:id="@+id/eventName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="16dp"
              android:background="@drawable/edittext_style"
              android:hint="@string/ae3"
              android:paddingBottom="8dp"
              android:paddingLeft="48dp"
              android:paddingRight="48dp"
              android:paddingTop="8dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:text="@string/ae4"
              android:textSize="18sp"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginLeft="-4dp"
                  android:layout_marginRight="-4dp"
                  android:layout_marginTop="8dp">

        <Spinner android:id="@+id/month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="-4dp"
                  android:text="@string/ae5"
                  android:textSize="20sp"/>

        <Spinner android:id="@+id/day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="-4dp"
                  android:text="@string/ae5"
                  android:textSize="20sp"/>

        <Spinner android:id="@+id/year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:text="@string/ae6"
              android:textSize="18sp"/>

    <EditText android:id="@+id/descriptionText"
              android:layout_width="match_parent"
              android:layout_height="94dp"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:layout_marginTop="16dp"
              android:background="@drawable/edittext_style"
              android:gravity="top"
              android:hint="@string/ae7"
              android:padding="8dp"/>

    <Button android:id="@+id/addEventButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:onClick="classButton_Clicked"
            android:text="@string/ae8" />
</LinearLayout>